# sgg

./: .gitignore  CMakeLists.txt
cmake/: AddUninstallTarget.cmake  Installation.cmake
sgg/: GLbackend.cpp  GLbackend.h  graphics.cpp  graphics.h
